--- a/stack.yml
+++ b/stack.yml
@@ -10,4 +10,6 @@ services:
     ports:
       - 5432:5432
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secretpassword
+      POSTGRES_DB: main
